[package]
name = "missue"
version = "0.1.0"
authors = ["alessio.disimone"]
edition = "2018"
description= "A simple local issue tracker based on the Ksv database from https://github.com/pingcap/talent-plan/tree/master/courses/rust"

[dependencies]
clap = "2.33.0"
structopt = "0.2.15"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
env_logger = "0.6.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"